<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/temperature_category">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/temperature"
            android:entryValues="@array/temperature_value_units"
            android:key="@string/temperature_unit_pref_key"
            android:title="@string/temperature_units_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/distance_category">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/distance"
            android:entryValues="@array/distance_value_units"
            android:key="@string/distance_unit_pref_key"
            android:title="@string/distance_units_title" />
    </PreferenceCategory>

    <Preference
        android:key="@string/about"
        android:title="@string/about"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"/>

</PreferenceScreen>
