<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_my_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:theme="@style/about_dialog_theme"
            app:title="@string/about" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/powered_by_dark_sky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@android:color/black"
        app:srcCompat="@drawable/ic_dark_sky_logo"
        android:padding="8dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:gravity="center_vertical"
        android:text="@string/powered_by_dark_sky"
        android:textColor="@android:color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/ic_logo"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/powered_by_dark_sky" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/app_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/app_logo" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:text="1.0.0"
        app:layout_constraintBottom_toBottomOf="@id/app_logo"
        app:layout_constraintEnd_toEndOf="@id/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />


    <TextView
        android:id="@+id/dev_name"
        android:layout_width="0dp"
        android:paddingTop="24dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/dev_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_version" />

    <TextView
        android:id="@+id/dev_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/dev_desc"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dev_name" />

    <Space
        android:id="@+id/contact_space"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dev_desc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rate_this_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/rate_this_app"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/location_fill_color"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_space" />

    <Space
        android:id="@+id/lower_contact_button"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rate_this_app" />


</androidx.constraintlayout.widget.ConstraintLayout>