<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_to_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/daily_forecast_recycle_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/forecast_daily_item"
                tools:orientation="horizontal" />

            <View
                android:id="@+id/daily_hourly_forecast_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"

                android:background="@color/separator_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_forecast_recycle_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourly_forecast_recycle_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/daily_hourly_forecast_separator"
                tools:listitem="@layout/hourly_forecast_item"
                tools:orientation="horizontal" />

            <View
                android:id="@+id/hourly_forecast_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hourly_forecast_recycle_view" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hourly_forecast_separator">

                <TextView
                    android:id="@+id/summery_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Summery"
                    android:textColor="@color/separator_background"
                    app:layout_constraintBottom_toTopOf="@+id/cloud_cover_txt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/summery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Summery"
                    android:textColor="@android:color/white"
                    app:layout_constraintBaseline_toBaselineOf="@+id/summery_txt"
                    app:layout_constraintBottom_toTopOf="@+id/cloud_cover_txt"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/cloud_cover_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/cloud_cover"
                    android:textColor="@color/separator_background"
                    app:layout_constraintBottom_toTopOf="@+id/wind_gust_txt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/summery_txt" />

                <TextView
                    android:id="@+id/cloud_cover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="22%"
                    android:textColor="@android:color/white"
                    app:layout_constraintBaseline_toBaselineOf="@id/cloud_cover_txt"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/wind_gust_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/wind_gust"
                    android:textColor="@color/separator_background"
                    app:layout_constraintBottom_toTopOf="@id/uv_index_txt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cloud_cover_txt" />

                <TextView
                    android:id="@+id/wind_gust"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="22"
                    android:textColor="@android:color/white"
                    app:layout_constraintBaseline_toBaselineOf="@id/wind_gust_txt"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/uv_index_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/uv_index"
                    android:textColor="@color/separator_background"
                    app:layout_constraintBottom_toTopOf="@id/wind_speed_txt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/wind_gust_txt" />

                <TextView
                    android:id="@+id/uv_index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12"
                    android:textColor="@android:color/white"
                    app:layout_constraintBaseline_toBaselineOf="@id/uv_index_txt"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/wind_speed_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/wind_speed"
                    android:textColor="@color/separator_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/uv_index_txt" />

                <TextView
                    android:id="@+id/wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="111"
                    android:textColor="@android:color/white"
                    app:layout_constraintBaseline_toBaselineOf="@id/wind_speed_txt"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/loading_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:text="ERROR"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loading_view" />


            <ProgressBar
                android:id="@+id/loading_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>